--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "lowdb": "^1.0.0",
         "typescript": "^3.9.6"
     },
     "devDependencies": {
         "@types/express": "^4.17.6",
+        "@types/lowdb": "^1.0.9",
         "@typescript-eslint/eslint-plugin": "^3.5.0",
         "@typescript-eslint/parser": "^3.5.0",
         "eslint": "^7.4.0",
