--- a/package.json
+++ b/package.json
@@ -19,11 +19,16 @@
         "eslint": "^7.4.0",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-plugin-import": "^2.22.0",
+        "nodemon": "^2.0.4",
         "tslint": "^6.1.2"
     },
     "scripts": {
-        "start": "tsc && node dist/app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build-ts": "tsc",
+        "serve": "node dist/app.js",
+        "serve-debug": "nodemon --inspect dist/app.js --ignore dist/db/db.json",
+        "start": "npm run serve",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "watch-debug": "npm run build-ts && npm run serve-debug"
     },
     "author": "",
     "license": "ISC"
