--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,28 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "no-console": "off"
+        "no-console": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+              "js": "never",
+              "mjs": "never",
+              "jsx": "never",
+              "ts": "never",
+              "tsx": "never"
+            }
+          ]
+    },
+    "settings": {
+        "import/extensions": [".js",".jsx",".ts",".tsx"],
+        "import/parsers": {
+            "@typescript-eslint/parser": [".ts",".tsx"]
+        },
+        "import/resolver": {
+          "node": {
+            "extensions": [".js", ".jsx", ".ts", ".tsx"]
+          }
+        }
     }
 }
