--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
     "description": "",
     "main": "index.js",
     "dependencies": {
+        "@types/body-parser": "^1.19.0",
         "body-parser": "^1.19.0",
         "chalk": "^4.1.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
         "lowdb": "^1.0.0",
-        "typescript": "^3.9.6"
+        "typescript": "^3.9.6",
+        "uniqid": "^5.2.0"
     },
     "devDependencies": {
         "@types/express": "^4.17.6",
